make coverage level to 100%

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,7 @@
 DJANGO_SETTINGS_MODULE = tests.settings
 norecursedirs = _build
 addopts = --reuse-db
+markers =
+    livetest: mark a test as a live test
+    onlydevel: mark a test as a only devel test
+    target: for development, mark the only test target
