--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -4,5 +4,6 @@ coveralls
 mock>=1.0.1
 flake8>=2.1.0
 tox>=1.7.0
-
-# Additional test requirements go here
+pytest>=2.6.4
+pytest-django>=2.8.0
+pyquery>=1.2.9
