add toxworkdir, whitelist_externals setting

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,48 @@
 [tox]
-envlist = py26, py27, py33
+toxworkdir={homedir}/.tox/django-custom-email-user
+envlist =
+    py{27,33}-django{15,16},
+    py{27,33,34}-django{17,18},
+    flake8
 
 [testenv]
+basepython =
+    py27: python2.7
+    py33: python3.3
+    py34: python3.4
+commands =
+    make test
+deps =
+    django15: Django>=1.5,<1.6
+    django16: Django>=1.6,<1.7
+    django17: Django>=1.7,<1.8
+    django18: https://www.djangoproject.com/download/1.8c1/tarball/
+    psycopg2
+    django-discover-runner
+    mock
+    coverage
+    pytest
+    pytest-django
+    pyquery
+    selenium
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/custom_email_user
-commands = python runtests.py
+whitelist_externals = make
+
+[testenv:flake8]
+basepython =
+    python2.7
+commands = make flake8
 deps =
-    -r{toxinidir}/requirements-test.txt
+    flake8
+
+
+;[tox]
+;envlist = py26, py27, py33
+;
+;[testenv]
+;setenv =
+;    PYTHONPATH = {toxinidir}:{toxinidir}/custom_email_user
+;commands = python runtests.py
+;deps =
+;    -r{toxinidir}/requirements-test.txt
